<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/calc_background_light_grey">

        <TextView
            android:id="@+id/text_info"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/resultado"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/calc_text_light_grey"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.49" />

        <EditText
            android:id="@+id/text_calc"
            style="@android:style/Widget.Material.EditText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:enabled="false"
            android:gravity="bottom"
            android:hint="@string/calc"
            android:inputType="numberDecimal"
            android:lines="2"
            android:maxLines="2"
            android:textColor="@color/white"
            android:textColorHint="@color/calc_text_light_grey"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_info" />

        <Button
            android:id="@+id/btn_7"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:background="@drawable/circle"
            android:text="@string/seven"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_4"
            app:layout_constraintEnd_toStartOf="@+id/btn_8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_calc" />

        <Button
            android:id="@+id/btn_8"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:background="@drawable/circle"
            android:text="@string/eight"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_5"
            app:layout_constraintEnd_toStartOf="@+id/btn_9"
            app:layout_constraintStart_toEndOf="@+id/btn_7"
            app:layout_constraintTop_toBottomOf="@+id/text_calc" />

        <Button
            android:id="@+id/btn_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:background="@drawable/circle"
            android:text="@string/nine"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_6"
            app:layout_constraintEnd_toStartOf="@+id/btn_Divide"
            app:layout_constraintStart_toEndOf="@+id/btn_8"
            app:layout_constraintTop_toBottomOf="@+id/text_calc" />

        <Button
            android:id="@+id/btn_Divide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:background="@drawable/circle"
            android:text="@string/divide"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_Multiply"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_9"
            app:layout_constraintTop_toBottomOf="@+id/text_calc"
            app:strokeColor="@color/calc_background_primary_grey" />

        <Button
            android:id="@+id/btn_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:background="@drawable/circle"
            android:text="@string/four"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_1"
            app:layout_constraintEnd_toStartOf="@+id/btn_5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_7" />

        <Button
            android:id="@+id/btn_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:background="@drawable/circle"
            android:text="@string/five"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_2"
            app:layout_constraintEnd_toStartOf="@+id/btn_6"
            app:layout_constraintStart_toEndOf="@+id/btn_4"
            app:layout_constraintTop_toBottomOf="@+id/btn_8" />

        <Button
            android:id="@+id/btn_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:background="@drawable/circle"
            android:text="@string/six"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_3"
            app:layout_constraintEnd_toStartOf="@+id/btn_Multiply"
            app:layout_constraintStart_toEndOf="@+id/btn_5"
            app:layout_constraintTop_toBottomOf="@+id/btn_9" />

        <Button
            android:id="@+id/btn_Multiply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:background="@drawable/circle"
            android:text="@string/multiply"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_Subtract"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_6"
            app:layout_constraintTop_toBottomOf="@+id/btn_Divide" />

        <Button
            android:id="@+id/btn_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:background="@drawable/circle"
            android:text="@string/one"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_Dot"
            app:layout_constraintEnd_toStartOf="@+id/btn_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_4" />

        <Button
            android:id="@+id/btn_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:background="@drawable/circle"
            android:text="@string/two"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_0"
            app:layout_constraintEnd_toStartOf="@+id/btn_3"
            app:layout_constraintStart_toEndOf="@+id/btn_1"
            app:layout_constraintTop_toBottomOf="@+id/btn_5" />

        <Button
            android:id="@+id/btn_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:background="@drawable/circle"
            android:text="@string/three"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_Equal"
            app:layout_constraintEnd_toStartOf="@+id/btn_Subtract"
            app:layout_constraintStart_toEndOf="@+id/btn_2"
            app:layout_constraintTop_toBottomOf="@+id/btn_6" />

        <Button
            android:id="@+id/btn_Subtract"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:background="@drawable/circle"
            android:text="@string/subtract"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_Add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_3"
            app:layout_constraintTop_toBottomOf="@+id/btn_Multiply" />

        <Button
            android:id="@+id/btn_Dot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:background="@drawable/circle"
            android:text="@string/dot"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_LParen"
            app:layout_constraintEnd_toStartOf="@+id/btn_0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_1" />

        <Button
            android:id="@+id/btn_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:background="@drawable/circle"
            android:text="@string/zero"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_RParen"
            app:layout_constraintEnd_toStartOf="@+id/btn_Equal"
            app:layout_constraintStart_toEndOf="@+id/btn_Dot"
            app:layout_constraintTop_toBottomOf="@+id/btn_2" />

        <Button
            android:id="@+id/btn_Equal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:background="@drawable/circle"
            android:text="@string/equal"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_Power"
            app:layout_constraintEnd_toStartOf="@+id/btn_Add"
            app:layout_constraintStart_toEndOf="@+id/btn_0"
            app:layout_constraintTop_toBottomOf="@+id/btn_3" />

        <Button
            android:id="@+id/btn_Add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:background="@drawable/circle"
            android:text="@string/add"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_Clear"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_Equal"
            app:layout_constraintTop_toBottomOf="@+id/btn_Subtract" />

        <Button
            android:id="@+id/btn_LParen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="250dp"
            android:layout_weight="1"
            android:background="@drawable/circle"
            android:text="@string/LParen"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_RParen"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_Dot" />

        <Button
            android:id="@+id/btn_RParen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="250dp"
            android:layout_weight="1"
            android:background="@drawable/circle"
            android:text="@string/RParen"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_Power"
            app:layout_constraintStart_toEndOf="@+id/btn_LParen"
            app:layout_constraintTop_toBottomOf="@+id/btn_0" />

        <Button
            android:id="@+id/btn_Power"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="250dp"
            android:layout_weight="1"
            android:background="@drawable/circle"
            android:text="@string/pow"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_Clear"
            app:layout_constraintStart_toEndOf="@+id/btn_RParen"
            app:layout_constraintTop_toBottomOf="@+id/btn_Equal" />

        <Button
            android:id="@+id/btn_Clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="250dp"
            android:layout_weight="1"
            android:background="@drawable/circle"
            android:text="@string/clear"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_Power"
            app:layout_constraintTop_toBottomOf="@+id/btn_Add" />


</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>